# serializer version: 1
# name: test_diagnostics[no_schedule]
  dict({
    'model': dict({
      'firmware': '9.12',
      'max_programs': 3,
      'max_stations': 12,
      'model': '0005',
      'name': 'ESP-TM2',
    }),
    'options': dict({
      'duration': 6,
    }),
    'schedule': None,
    'state': dict({
      'active_zones': list([
      ]),
      'rain': False,
      'rain_delay': 0,
      'zones': list([
        1,
        2,
        3,
        4,
        5,
        6,
        7,
      ]),
    }),
  })
# ---
# name: test_diagnostics[schedule]
  dict({
    'model': dict({
      'firmware': '9.12',
      'max_programs': 3,
      'max_stations': 12,
      'model': '0005',
      'name': 'ESP-TM2',
    }),
    'options': dict({
      'duration': 6,
    }),
    'schedule': dict({
      'controller_info': dict({
        'rain_delay': 0,
        'rain_sensor': False,
        'station_delay': 0,
      }),
      'programs': list([
        dict({
          'controller_info': dict({
            'rain_delay': 0,
            'rain_sensor': False,
            'station_delay': 0,
          }),
          'days_of_week': list([
            1,
            2,
          ]),
          'durations': list([
            dict({
              'duration': 1500.0,
              'zone': 1,
            }),
            dict({
              'duration': 1200.0,
              'zone': 2,
            }),
            dict({
              'duration': 420.0,
              'zone': 3,
            }),
            dict({
              'duration': 1200.0,
              'zone': 4,
            }),
            dict({
              'duration': 600.0,
              'zone': 5,
            }),
          ]),
          'frequency': 0,
          'period': None,
          'program': 0,
          'starts': list([
            '04:00:00',
          ]),
          'synchro': 2,
        }),
        dict({
          'controller_info': dict({
            'rain_delay': 0,
            'rain_sensor': False,
            'station_delay': 0,
          }),
          'days_of_week': list([
            0,
            4,
          ]),
          'durations': list([
          ]),
          'frequency': 0,
          'period': None,
          'program': 1,
          'starts': list([
          ]),
          'synchro': 2,
        }),
        dict({
          'controller_info': dict({
            'rain_delay': 0,
            'rain_sensor': False,
            'station_delay': 0,
          }),
          'days_of_week': list([
          ]),
          'durations': list([
          ]),
          'frequency': 0,
          'period': None,
          'program': 2,
          'starts': list([
          ]),
          'synchro': 0,
        }),
      ]),
      'zone_schedules': dict({
      }),
    }),
    'state': dict({
      'active_zones': list([
      ]),
      'rain': False,
      'rain_delay': 0,
      'zones': list([
        1,
        2,
        3,
        4,
        5,
        6,
        7,
      ]),
    }),
  })
# ---
